IMOD History
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
5/31/12: In eTomo, removed incorrect error messages from the _err.log
(In 4.5).(Bug# 1620)

5/31/12: In eTomo, removed extra lines that had been added onto a warning
message (In 4.5).(Bug# 1621) 

5/29/12: IMOD_4-5-3
5/26/12: Changed Tiltalign and Beadtrack to get initial x/y/z
coordinates with a direct solution instead of iteration, and added an initial
scan for correct starting tilt axis rotation angle to Tiltalign.

5/26/12: Changed -linear option to Imodfindbeads to allow use of antialias
image reduction instead of regular interpolation.

5/26/12: Made Taperoutvol and  Assemblevol preserve angles in header so they
are not lost when running NAD (In 4.5).

5/24/12: Fixed problem where eTomo freezes on Ubuntu when it looks for lsof in
the wrong directory (In 4.5).(Bug# 1617)

5/21/12: Fixed get_nxyz to take long filenames, which should fix Setupcombine
and some other combine steps (In 4.5).

5/15/12: Made Imodhelp able to complete a partial program name and offer 
choice if several match (In 4.5).

5/15/12: Fix setting of environment variables in Vmstopy (In 4.5).

5/11/12: Parallelized clip smooth with OpenMP and made it use a much faster
routine for a float input data.

5/11/12: Fixed Tiltalign array sizes that allowed less than 1440 views
(In 4.5).

5/11/12: Stopped Beadtrack from trying to do outlier removal with 3 points and
fixed an initialization problem (In 4.5).

5/11/12: Fixed Imodfindbeads crash when outputting filtered file (In 4.5).

5/9/12: Fixed 3dmod loading of RGB data with binning in X/Y (In 4.5).

5/8/12: IMOD_4-6-1
5/8/12: Added lasso to Zap toolbar, useful for selecting multiple contours,
masking an isosurface, and selecting area for deleting contours below
threshold in bead Fixer.

5/7/12: IMOD_4-5-2
5/7/12: Needed to prepend pylib to path in Python scripts because there is a 
pip installer module in some installations (In 4.5).
