@@ -1,5 +1,8 @@
 IMOD History
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+6/5/12: In eTomo, added code to dump the state of classes which may be
+involved in an intermittently occurring bug.(Bug# 1618)
+
 5/31/12: In eTomo, removed incorrect error messages from the _err.log
 (In 4.5).(Bug# 1620)
 
